Removed Stopwatch until improved.Added Smooth scroll to index.html; better portfolio card spacing on img,title and link;rid of prism background style;3card columns over 4!!!;improved portfolio beginner projects code readability and function;

--- a/docs/nickstyle.css
+++ b/docs/nickstyle.css
@@ -2,7 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
  i think this code aint workin*/
-body{
+
+html{
+    scroll-behavior: smooth;
+}
+ body{
     font-family:'Montserrat',sans-serif;	
 }
 
@@ -50,11 +54,9 @@ li.important{
 }
     
     /*Spacing:  https://www.w3schools.com/bootstrap4/bootstrap_utilities.asp*/
-    @media (min-width: 576px){		.card-columns{ column-count: 2;	}		}
+    @media (min-width: 0px){		.card-columns{ column-count: 2;	}		}
+    @media (min-width: 576px){		.card-columns{ column-count: 3;	}		}
     @media (min-width: 768px){		.card-columns{ column-count: 3;	}		}
-    @media (min-width: 992px){		.card-columns{ column-count: 4;	}		}
-    /*@media (min-width: 1200px){		.card-columns{ column-count: 4;	}		WHY DOESNT THIS WORK?}*/
-
 
 
     /*Tiny Navbar for Phone*/ 
@@ -66,4 +68,7 @@ li.important{
 
 
     }
-    
+
+span,button{
+    font-size: 24px;
+}
